--- a/Data Science Work/Model Building.ipynb
+++ b/Data Science Work/Model Building.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,46 +27,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data.csv')"
+    "train = pd.read_csv('train.csv')\n",
+    "tune = pd.read_csv('tune.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['year', 'primary_type', 'description', 'location_description', 'arrest',\n",
-       "       'domestic', 'beat', 'district', 'ward', 'community_area',\n",
-       "       'crimes_per_district', 'crimes_per_ward', 'crimes_per_community',\n",
-       "       'crimes_per_beat', 'primary_crimes_per_district',\n",
-       "       'detailed_crimes_per_district'],\n",
+       "Index(['unique_key', 'case_number', 'date', 'block', 'iucr', 'primary_type',\n",
+       "       'description', 'location_description', 'arrest', 'domestic', 'beat',\n",
+       "       'district', 'ward', 'community_area', 'fbi_code', 'x_coordinate',\n",
+       "       'y_coordinate', 'year', 'updated_on', 'latitude', 'longitude',\n",
+       "       'location', 'DateTime', 'time', 'day', 'month', 'season',\n",
+       "       'crimes_per_year', 'prev_crimes_per_year', 'primary_type_grouped'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns"
+    "train.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['unique_key', 'case_number', 'date', 'block', 'iucr', 'primary_type',\n",
+       "       'description', 'location_description', 'arrest', 'domestic', 'beat',\n",
+       "       'district', 'ward', 'community_area', 'fbi_code', 'x_coordinate',\n",
+       "       'y_coordinate', 'year', 'updated_on', 'latitude', 'longitude',\n",
+       "       'location', 'DateTime', 'time', 'day', 'month', 'season',\n",
+       "       'crimes_per_year', 'prev_crimes_per_year', 'primary_type_grouped'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tune.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_model = data[['year', 'arrest', 'domestic','crimes_per_district','primary_crimes_per_district','detailed_crimes_per_district','district']]\n",
+    "train_labels = train['arrest']\n",
+    "train = train[['year', 'domestic','ward','district','beat','community_area','season','month','location_description','description','primary_type_grouped','crimes_per_year','prev_crimes_per_year']]\n",
+    "\n",
+    "tune_labels = tune['arrest']\n",
+    "tune = tune[['year', 'domestic','ward','district','beat','community_area','season','month','location_description','description','primary_type_grouped','crimes_per_year','prev_crimes_per_year']]\n",
+    "\n",
+    "#data_model = pd.get_dummies(data_model)\n",
     "#data_model = pd.get_dummies(data_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.ward = pd.factorize(train.ward)[0]\n",
+    "train.district = pd.factorize(train.district)[0]\n",
+    "train.beat = pd.factorize(train.beat)[0]\n",
+    "train.community_area = pd.factorize(train.community_area)[0]\n",
+    "train.location_description = pd.factorize(train.location_description)[0]\n",
+    "train.description = pd.factorize(train.description)[0]\n",
+    "\n",
+    "tune.ward = pd.factorize(tune.ward)[0]\n",
+    "tune.district = pd.factorize(tune.district)[0]\n",
+    "tune.beat = pd.factorize(tune.beat)[0]\n",
+    "tune.community_area = pd.factorize(tune.community_area)[0]\n",
+    "tune.location_description = pd.factorize(tune.location_description)[0]\n",
+    "tune.description = pd.factorize(tune.description)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    250616\n",
+       "True     101965\n",
+       "Name: arrest, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(352581, 23)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(95190, 23)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tune.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28919595780827667"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "101965/352581"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    71495\n",
+       "True     23695\n",
+       "Name: arrest, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tune_labels.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24892320621914066"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "23695/95190"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.get_dummies(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tune = pd.get_dummies(tune)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(352581, 23)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(95190, 23)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tune.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.83      0.95      0.89     71495\n",
+      "        True       0.74      0.43      0.54     23695\n",
+      "\n",
+      "    accuracy                           0.82     95190\n",
+      "   macro avg       0.79      0.69      0.71     95190\n",
+      "weighted avg       0.81      0.82      0.80     95190\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier().fit(train, train_labels)\n",
+    "y_pred = model.predict(tune)\n",
+    "print(classification_report(tune_labels, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#f1-score is 0.4 for baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.541393957203537"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(tune_labels, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tn, fp, fn, tp  = confusion_matrix(tune_labels, y_pred).ravel()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10133"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13562"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn"
    ]
   },
   {
@@ -81,7 +429,8 @@
     }
    ],
    "source": [
-    "data_model.shape"
+    "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
+    ">>> clf.fit(X, y)"
    ]
   },
   {
